--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -6,8 +6,10 @@
     background-color: #282c34;
     color: #fff;
 
-    .span{
-        font-weight: bold;
-        color: #61dafb;
-    }
+
+}
+
+.footer span{
+    font-weight: bold;
+    color: #61dafb;
 }
